--- a/InMemoryApp.Web/Views/Home/Index.cshtml
+++ b/InMemoryApp.Web/Views/Home/Index.cshtml
@@ -6,3 +6,20 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <button type="button" class="person-list-button">Get Person List</button>
+        </div>
+    </div>
+</div>
+@section Scripts{
+
+    <script>
+        document.querySelector(".person-list-button").addEventListener("click",()=>{
+            $.post("/Home/GetPersonList",{},(list)=>{
+                console.log(list);
+            });
+        });
+    </script>
+}
