--- a/InMemoryApp.Web/Views/Home/Index.cshtml
+++ b/InMemoryApp.Web/Views/Home/Index.cshtml
@@ -2,31 +2,76 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
-<div class="container">
+
+<div class="container mt-5">
     <div class="row">
         <div class="col-12">
-            <button type="button" class="person-list-button">Get Person List</button>
-            <button type="button" class="clean-cache-button">Clean Cache</button>
+            <button type="button" class="person-list-button btn btn-success">Get Person List</button>
+            <button type="button" class="clean-cache-button btn btn-primary">Clean Cache</button>
+            <button type="button" class="clean-list-button btn btn-danger">Clean List</button>
+        </div>
+    </div>
+    <div class="row mt-5">
+        <div class="col-12">
+            <h4>Person List</h4>
+        </div>
+        @* <div class="col-12"> *@
+        @*     <div class="spinner-border text-info table-spinner" style="margin-left: 50%;width: 50px;height: 50px;display: none" role="status"> *@
+        @*         <span class="sr-only"></span> *@
+        @*     </div> *@
+        @* </div> *@
+        <div class="col-12">
+            <table class="table  person-list-table">
+                <thead>
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Fullname</th>
+                    <th scope="col">Job</th>
+                    <th scope="col">Mail</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                 
+                </tr>
+               
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
+
 @section Scripts{
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-sweetalert/1.0.1/sweetalert.min.js" integrity="sha512-MqEDqB7me8klOYxXXQlB4LaNf9V9S0+sG1i8LtPOYmHqICuEZ9ZLbyV3qIfADg2UJcLyCm4fawNiFvnYbcBJ1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-sweetalert/1.0.1/sweetalert.min.js" integrity="sha512-MqEDqB7me8klOYxXXQlB4LaNf9V9S0+sG1i8LtPOYmHqICuEZ9ZLbyV3qIfADg2UJcLyCm4fawNiFvnYbcBJ1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
         document.querySelector(".person-list-button").addEventListener("click",()=>{
             $.post("/Home/GetPersonList",{},(list)=>{
-                console.log(list);
+                 document.querySelector(".person-list-table > tbody").innerHTML="";
+              //  document.querySelector(".table-spinner").style.display="block";                
+                const listHtml = list.map(person =>{
+                    return `<tr>
+                            <td> ${person.id}</td>
+                            <td> ${person.fullName}</td>
+                            <td> ${person.email}</td>
+                            <td> ${person.job}</td>
+                        </tr>`
+                })
+                document.querySelector(".person-list-table > tbody").innerHTML = listHtml;
             });
         }); 
         
         document.querySelector(".clean-cache-button").addEventListener("click",()=>{
-            $.post("/Home/CleanCache",{},(list)=>{
-                console.log(list);
+            $.post("/Home/CleanCache",{},(res)=>{
+                if (res.status){
+                 swal("Success", res.message, "success");
+                }
+                else{
+                 swal("Error", res.message, "error");
+                }
             });
+        }); 
+        document.querySelector(".clean-list-button").addEventListener("click",()=>{
+          document.querySelector(".person-list-table > tbody").innerHTML="";
         });
     </script>
 }
